# robotics_projects

./: README.md
first_project/: CMakeLists.txt  info.txt  package.xml  readme.txt
first_project/launch/: first_project.launch
first_project/src/: pub.cpp
second_project/: CMakeLists.txt  config_mapping.rviz  config_nav.rviz  info.txt  package.xml  readme.txt  waypoints.csv
second_project/cfg/: costmap.yaml  global_cm.yaml  local_cm.yaml  local_planner.yaml  move_base.yaml  st_config.yaml
second_project/launch/: 2d_laser_mapping.launch  2d_mapping.launch  3d_lidar_mapping.launch  3d_mapping.launch  amcl.launch  launch.launch  navigation.launch  stage.launch
second_project/map_raw/: first_laser.pgm
second_project/map_raw/2d/: first_map.pgm  first_map.yaml  second_map.pgm  second_map.yaml
second_project/map_raw/3d/: first_map.pgm  first_map.yaml  second_map.pgm  second_map.yaml
second_project/src/: module.cpp  navigation.cpp  tf_publisher.cpp
second_project/stage/: map.world  map.yaml  turtlebot.inc
